# paraglider-autopilot

./: .gitignore  README.md  config.py  pyproject.toml
src/: main.py
src/autopilot/: parachute.py
src/config/: settings.py
src/rl/: parachute_cone_env.py  parachute_env.py  train_parachute.py  train_parachute_cone.py
src/simulator/: fdm_reader.py  fg_controller.py  fgfs_validation.py  jsbsim_runner.py  launcher.py  telemetry.py
